# vpux_plugin

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODEOWNERS  LICENSE  SourcePackageConfig.json
scripts/: CMakeLists.txt  run_all_lit_tests.sh
scripts/CuttedTinyYoloV2_PostProcessing/: aug.py  main.py  readme.txt  utils.py
scripts/extract_layers_info/obtain_csv_files/: file_functions.py  layer_functions.py  main.py
scripts/extract_layers_info/to_html/: README.md  body.css  table1.css  table2.css  table3.css  table4.css  to_html.py
scripts/extract_layers_info/to_md/: README.md  to_md.py
scripts/tests_parser/: ParseTestsInfo.py
src/: CMakeLists.txt
src/vpux_compiler/: CMakeLists.txt
src/vpux_compiler/cmake/: add_npu_library.cmake  vpux_tblgen.cmake
src/vpux_compiler/docs/: code_style.md  npu2_7_sw_layer_enabling.md  npu4000_m2i.md  sw_layer_enabling.md
src/vpux_compiler/src/: CMakeLists.txt  compiler.cpp  compiler_version.cpp  init.cpp  interfaces_registry.cpp  options_mapper.cpp  passes_register.cpp  pipelines_register.cpp
src/vpux_compiler/tblgen/: CMakeLists.txt
src/vpux_driver_compiler/: CHANGES.txt  CMakeLists.txt  README.md  how-to-build.md
src/vpux_driver_compiler/docs/: driver-compiler-windows-env-setup.md  how-to-build-tbb.md  how_to_build_driver_compiler.md  how_to_build_driver_compiler_on_linux.md  how_to_build_driver_compiler_on_windows.md  how_to_build_driver_compiler_withCmakePresets_on_linux.md  how_to_build_driver_compiler_withCmakePresets_on_windows.md  how_to_debug.md  how_to_test.md
src/vpux_driver_compiler/include/: npu_driver_compiler.h  vcl_common.hpp  vcl_compiler.hpp  vcl_executable.hpp  vcl_logger.hpp  vcl_profiling.hpp
src/vpux_driver_compiler/src/: CMakeLists.txt
src/vpux_driver_compiler/test/: CMakeLists.txt  compilerTest.c  loaderTest.cpp  profilingTest.c
src/vpux_elf/tests/: act-kernel.mlir  nncmx-two-dma-barrier-elf.mlir  one-dma-elf.mlir  two-dma-barrier-elf.mlir  two-dma-ports.mlir
src/vpux_imd_backend/: CMakeLists.txt
src/vpux_imd_backend/src/: backend.cpp  device.cpp  executor.cpp  infer_request.cpp  parsed_properties.cpp  platform_helpers.cpp  profiling.cpp
src/vpux_ngraph_transformations/: CMakeLists.txt
src/vpux_ngraph_transformations/src/: quantization_helpers.cpp
src/vpux_translate_utils/: CMakeLists.txt
src/vpux_utils/src/: CMakeLists.txt  precomp.hpp
sw_runtime_kernels/kernels/: CMakeLists.txt
sw_runtime_kernels/kernels/inc/: common_types.h
tests/: CMakeLists.txt
tests/functional/: CMakeLists.txt  README.md  main.cpp
tests/functional/behavior/: compilation_for_different_platforms.cpp  elf_config.cpp  fail_gracefully_forward_compatibility.cpp  fail_gracefully_forward_compatibility.hpp  infer_request_run.cpp  infer_request_run.hpp  profiling.cpp  replace_sw_layers.cpp  work_with_devices.cpp  work_with_devices.hpp
tests/functional/common/: functions.cpp  functions.h  npu_test_env_cfg.cpp  npu_test_env_cfg.hpp  utils.cpp  utils.hpp  vpu_test_env_cfg.cpp  vpu_test_env_cfg.hpp
tests/functional/compile/: test_compile.py  test_infer_compiled.py
tests/functional/shared_tests_instances/: pretty_test_arguments.cpp  pretty_test_arguments.hpp  set_device_name.cpp  skip_tests_config.cpp  vpu_ov2_layer_test.cpp  vpu_ov2_layer_test.hpp  vpu_test_report.cpp  vpu_test_report.hpp  vpu_test_tool.cpp  vpu_test_tool.hpp
tests/functional/single_layer_tests/: avg_pool14.cpp  compress_weights_btc.cpp  convert_like.cpp  detection_output.cpp  dpu_concat.cpp  dynamic_shape_handling.cpp  dynamic_strided_slice.cpp  dynamic_unsqueeze.cpp  eltwise_ops.cpp  fake_quantize_two_axes.cpp  fake_quantize_with_axis.cpp  grouped_matmul.cpp  max_pool14.cpp  non_zero.cpp  roll_test.cpp  scatter_nd_update.cpp  strided_slice.cpp  swish_single_input_ngraph.cpp
tests/functional/subgraph_tests/: add_with_relu_3d.cpp  add_with_transpose.cpp  asymmetric_stride_convolution.cpp  avg_pool_with_conv.cpp  cmajor_conv_nhwc_input.cpp  concat_softmax.cpp  conv2d_in_mixed_mode.cpp  conv2d_with_bias.cpp  conv2d_with_maxpool.cpp  conv_backprop_with_bias.cpp  conv_backprop_with_transpose.cpp  conv_hswish.cpp  conv_interpolate_concat.cpp  conv_interpolate_transpose.cpp  conv_softmax_conv.cpp  conv_with_transpose.cpp  convolution_clamp.cpp  convolution_pwl.cpp  depth_to_space.cpp  dilated_conv_convert.cpp  dpu_expand.cpp  dpu_with_convert.cpp  dynamic_add_with_shapeof.cpp  dynamic_lstm_sequence.cpp  dynamic_maxpool.cpp  dynamic_reshape.cpp  dynamic_shape_broadcast_subgraph.cpp  dynamic_shape_lstm_sequence_subgraph.cpp  dynamic_sigmoid_with_shapeof.cpp  dynamic_strided_slice.cpp  eltwise_different_inputs.cpp  fake_quantize_mul_fuse.cpp  fq_clamp.cpp  fuse_mvn.cpp  fuse_mvn6_scale_bias.cpp  fuse_rms.cpp  fuse_rms_rsum.cpp  group_normalization_decomposition.cpp  handle_fake_quant_has_negative_scales.cpp  if.cpp  (+53 more)
tests/fuzz/: README.md
tests/lit/: CMakeLists.txt  lit.local.cfg
tests/lit/NPU/: lit.local.cfg
tests/micro_bechmarks/: CMakeLists.txt  README.md
tests/micro_bechmarks/src/: convert_float16.cpp  dequantize.cpp  main.cpp
tests/smoke/: CMakeLists.txt  vpu4_dialect_library.cpp
tests/unit/: CMakeLists.txt
tests/unit/vpux_elf/: loader.cpp  (+2 more)
tools/: CMakeLists.txt
tools/compile_tool/: CMakeLists.txt  main.cpp
tools/edit-xml/: README.md  edit_xml.py
tools/ir-analyzer/: main.py  requirements.in
tools/model-output-comparator/: README.md  bin_diff.py
tools/npureg-tblgen/: CMakeLists.txt  main.cpp
tools/profiling_parser/: CMakeLists.txt  prof_parser.cpp
tools/protopipe/: CMakeLists.txt  README.md  main.cpp
tools/query_model/: CMakeLists.txt  main.cpp
tools/side-load-strategy-generator/: README.md  generate_mc_sideloader.py
tools/single-image-test/: main.cpp
tools/sol-generator/: main.cpp
tools/test_tool/: CMakeLists.txt
tools/vpux-binutils/: CMakeLists.txt
tools/vpux-lsp-server/: CMakeLists.txt  vpux-lsp-server.cpp
tools/vpux-opt/: CMakeLists.txt  README.md  mlir_passes_cutter.py  mlir_passes_extractor.py  vpux-opt.cpp
tools/vpux-translate/: CMakeLists.txt  vpux-translate.cpp
(+5586 files in other folders)
